# competitiveprogramming

./: .gitignore  CMakeLists.txt  README.md  cpCtest.cpp  expectedOutput.txt  input.txt  main.cpp  output.txt
Bazel/: README.md
CMake/: CMakeLists.txt  README.md  main.cpp
VisualStudioCodeNative/: README.md
VisualStudioCodeNative/mac/cpp/: cp.cpp
VisualStudioCodeNative/mac/kotlin/: hello.kt
VisualStudioCodeNative/mac/python/: standardplot.py
VisualStudioCodeNative/windows/: cp.cpp  output.txt
testing/: cpCtest.cpp
